Adding scholar icon

--- a/_includes/author-profile-custom-links.html
+++ b/_includes/author-profile-custom-links.html
@@ -1,7 +1,5 @@
-<!--
-  <li>
-    <a href="http://link-to-whatever-social-network.com/user/" itemprop="sameAs" rel="nofollow noopener noreferrer">
-      <i class="fas fa-fw" aria-hidden="true"></i> Custom Social Profile Link
-    </a>
-  </li>
--->
+<li>
+	<a href="https://scholar.google.com/citations?hl=en&user=5dPjODwAAAAJ" itemprop="sameAs">
+		<i class="ai ai-google-scholar ai-fw"></i> Google Scholar
+	</a>
+</li>
